# Job-Scraper

./: .gitignore  README.md
backend/: README.md  job_scraper_manager.py  main.py  pyproject.toml
backend/scrapers/: __init__.py  base_scraper.py  glassdoor_scraper.py  indeed_scraper.py  linkedin_scraper.py
backend/tests/: test_scrape_endpoint.py  test_scrapers.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: job-results-table.tsx  job-scraper-form.tsx
frontend/components/ui/: button.tsx  card.tsx  label.tsx
