[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "uvicorn[standard]>=0.38.0",
]
